@@ -30,7 +30,7 @@ trait ObjectModel {
 
   def addListenerByName(listener: => Unit): Unit
 
-  def addListener(listener:()=>Unit):Unit
+  def addListener(listener: () => Unit): Unit
 }
 
 class ObjectSelectionNode(transform: ModelViewTransform2D, model: ObjectModel) extends PNode {
