@@ -9,6 +9,7 @@ import java.awt.geom.{Rectangle2D, Point2D}
 import java.text.DecimalFormat
 import umd.cs.piccolo.nodes.PText
 import umd.cs.piccolo.PNode
+
 class TickMarkSet(transform: ModelViewTransform2D, positionMapper: Double => Point2D, addListener: (() => Unit) => Unit) extends PNode {
   for (x <- -10 to 10 by 2) {
     addTickLabel(x)
