@@ -1,3 +1,4 @@
+Removed Go and Pause buttons from Force chart control panel
 Fixed: Make sure vector arrows overlap the chart and chart control panel
 Added a control to enter applied force in the box next to label
 Fixed: Force arrow slider should have a label to its left
